# rags_evaluate

./: evaluate_rags_with_ragas.ipynb  pyproject.toml  voting.txt
